# SpectraLang

./: .gitattributes  .gitignore  ARCHITECTURE.md  BATERIA_TESTES.md  Cargo.toml  Especificações iniciais.md  IMPLEMENTATION_COMPLETE.md  INDICE_DOCUMENTACAO.md  INVENTARIO_COMPLETO.md  PLANO_IMPLEMENTACAO.md  PROGRESS_REPORT_NOV_2025.md  PROXIMOS_PASSOS.md  QUICK_START.md  README.md  README_VISUAL.md  RELATORIO_IMPLEMENTACAO.md  RELATORIO_TESTES.md  ROADMAP_DETALHADO.md  SESSION_SUMMARY.md  SESSION_SUMMARY_100_PERCENT.md  SISTEMA_TIPOS_COMPLETO.md  STATUS.md  STATUS_FINAL.md  TEST_RESULTS.txt  TRAITS_SUMMARY.md  UPDATE_LOG_BACKEND.md  cargo_errors.txt  prev_semantic.rs  run_tests.ps1  struct_variant_check.txt  test_advanced.spectra  test_boolr.spectra  test_bound_error.spectra  test_enum_match.spectra  test_generic_enum.spectra  test_generic_instantiate.spectra  test_generic_parse.spectra  test_mono_detect.spectra  test_mono_struct.spectra  test_parser.spectra  (+6 more)
app_project/: main.spectra  sa_algo.spectra  sa_analytics.spectra  sa_grades.spectra  sa_math.spectra  sa_report.spectra  sa_student.spectra
backend/: Cargo.toml  err.txt
backend/src/: aot.rs  codegen.rs  lib.rs
compiler/: Cargo.toml
complex_demo/: algorithms.spectra  cx_geometry.spectra  cx_ledger.spectra  (+8 more)
tools/spectra-cli/: Cargo.toml
tools/spectra-cli/.github/workflows/: spectra-fmt-check.yml
tools/spectra-cli/src/: compiler_integration.rs  config.rs  discovery.rs  formatter.rs  linker.rs  main.rs  navigation.rs  project.rs  runtime_lib.rs
tools/spectra-cli/tests/: integration_tests.rs
(+334 files in other folders)
