[package]
name = "spectra-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
spectra-midend = { path = "../midend" }
cranelift = "0.130"
cranelift-codegen = "0.130"
cranelift-frontend = "0.130"
cranelift-module = "0.130"
cranelift-jit = "0.130"
cranelift-native = "0.130"
target-lexicon = "0.12"
spectra-runtime = { path = "../runtime" }
