[package]
name = "spectra-cli"
version = "0.1.14"
edition = "2021"

[[bin]]
name = "spectralang"
path = "src/main.rs"

[dependencies]
spectra-compiler = { path = "../../compiler" }
spectra-midend = { path = "../../midend" }
spectra-backend = { path = "../../backend" }
spectra-runtime = { path = "../../runtime" }
toml = "0.8"
diff = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
